--- a/Python - notebooks/GVI - Sneh.ipynb
+++ b/Python - notebooks/GVI - Sneh.ipynb
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"~/Desktop/NCSA_genomics/Python - notebooks/GlucoCheck/Data/consolidatedDataForPackage.csv\")\n",
-    "data['Display Time'] = pd.to_datetime(data['Display Time'])\n",
+    "data = pd.read_csv(\"~/Desktop/NCSA_genomics/prediabetic.csv\")\n",
+    "data['DisplayTime'] = pd.to_datetime(data['DisplayTime'])\n",
     "data['GlucoseValue'] = pd.to_numeric(data['GlucoseValue'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "    dates = list()\n",
     "    data = data.reset_index(drop=True)\n",
     "    for i in range(0,len(data.index)):\n",
-    "        dates.append(data['Display Time'][i].date())\n",
+    "        dates.append(data['DisplayTime'][i].date())\n",
     "    data['Dates'] = dates\n",
     "    end = data['Dates'].iloc[-1]\n",
     "    start = data['Dates'].iloc[0]\n",
@@ -62,15 +62,15 @@
     "    return data\n",
     "\n",
     "def hourlySamples(df):\n",
-    "    groupkey = df['Display Time'].values.astype('datetime64[h]')\n",
+    "    groupkey = df['DisplayTime'].values.astype('datetime64[h]')\n",
     "    result = df.groupby(groupkey).mean()\n",
     "    result = result.reset_index(drop=True)\n",
     "    return (result)\n",
     "\n",
     "def subSample(data):\n",
     "    data = data.reset_index(drop=True)\n",
-    "    data['Display Time'] = pd.to_datetime(data['Display Time'])\n",
-    "    data['time_gap'] = data['Display Time'].shift(1)-data['Display Time'][0]\n",
+    "    data['DisplayTime'] = pd.to_datetime(data['DisplayTime'])\n",
+    "    data['time_gap'] = data['DisplayTime'].shift(1)-data['DisplayTime'][0]\n",
     "    data['time_gap'][0] = '00:00:00'\n",
     "    mods = [0,870,871,872,873,874,875,876,877,878,879,880,881,882,883,884,885,886,887,888,889,890,891,892,893,894,895,896,897,898,899]\n",
     "    subset = pd.DataFrame()\n",
@@ -79,8 +79,8 @@
     "        if (seconds%900) in mods:\n",
     "            subj_id = data['subjectId'][i]\n",
     "            gv = data['GlucoseValue'][i]\n",
-    "            dt = data['Display Time'][i]\n",
-    "            temp_df = pd.DataFrame({'Display Time':[dt], 'GlucoseValue':[gv], 'subjectId':[subj_id]})\n",
+    "            dt = data['DisplayTime'][i]\n",
+    "            temp_df = pd.DataFrame({'DisplayTime':[dt], 'GlucoseValue':[gv], 'subjectId':[subj_id]})\n",
     "            subset = pd.concat([temp_df,subset],ignore_index=True)\n",
     "    subset = subset.iloc[::-1]\n",
     "    subset = subset.reset_index(drop=True)\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
     "    \n",
     "    dates = []\n",
     "    for i in range(len(xx.index)):\n",
-    "        dates.append(xx['Display Time'][i].date())\n",
+    "        dates.append(xx['DisplayTime'][i].date())\n",
     "    xx['Date'] = dates \n",
     "    \n",
     "\n",
@@ -185,44 +185,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def modd(data):\n",
-    "    data = subSample(data)\n",
-    "    data['Display Time'] = data['Display Time'].dt.round('5min') \n",
-    "    \n",
+    "#     data = self.subSample(data)\n",
+    "    data['DisplayTime'] = data['DisplayTime'].dt.round('5min') \n",
+    "\n",
     "    times = []\n",
     "    for i in range(len(data.index)):\n",
-    "        times.append(data['Display Time'][i].time())\n",
+    "        times.append(data['DisplayTime'][i].time())\n",
     "    data['Time'] = times  \n",
     "\n",
     "\n",
-    "    Modd = [] \n",
-    "    s = 0\n",
+    "    Modd = []\n",
+    "    s = []\n",
     "    gvDiff = 0\n",
-    "\n",
-    "    for Time, df in data.groupby('Time'):\n",
-    "        gvDiff = df['GlucoseValue'] - df['GlucoseValue'].shift(-1)\n",
-    "        s = round(gvDiff.sum(),3)\n",
-    "        Modd.append(s)\n",
-    "    return round(mean(Modd),3)\n",
-    "    "
+    "    for Time, df in xx.groupby('Time'):\n",
+    "        gvDiff = abs(df['GlucoseValue'] - df['GlucoseValue'].shift(-1))\n",
+    "        gvDiff = gvDiff.dropna()\n",
+    "        s.append(mean(gvDiff))\n",
+    "    \n",
+    "    return round(mean(s),2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def congaN(df, n):\n",
-    "    day = df['Display Time'].iloc[-1]-df['Display Time'].iloc[0]\n",
+    "    day = df['DisplayTime'].iloc[-1]-df['DisplayTime'].iloc[0]\n",
     "    day = day.round(\"d\")\n",
     "    day = day.days\n",
     "    \n",
-    "    df = df.set_index(['Display Time'])\n",
+    "    df = df.set_index(['DisplayTime'])\n",
     "    t = str(n*3600)+'s'\n",
     "    gv = df['GlucoseValue'].resample(t).first()\n",
     "    \n",
@@ -247,17 +246,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "xx = data[data['subjectId'] == \"1636-69-032\"]\n",
-    "xx = fullDay(xx)"
+    "# xx = fullDay(xx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +265,7 @@
        "(1.740718384240811, 1.4662309368191722, 0.2744874474216389)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +285,7 @@
        "25.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +305,7 @@
        "3.174"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,16 +316,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>subjectId</th>\n",
+       "      <th>DisplayTime</th>\n",
+       "      <th>GlucoseValue</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-14 00:03:00</td>\n",
+       "      <td>120</td>\n",
+       "      <td>00:03:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-14 00:08:00</td>\n",
+       "      <td>120</td>\n",
+       "      <td>00:08:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-14 00:13:00</td>\n",
+       "      <td>123</td>\n",
+       "      <td>00:13:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-14 00:18:00</td>\n",
+       "      <td>126</td>\n",
+       "      <td>00:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-14 00:23:00</td>\n",
+       "      <td>127</td>\n",
+       "      <td>00:23:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1434</td>\n",
+       "      <td>1435</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-18 23:37:00</td>\n",
+       "      <td>136</td>\n",
+       "      <td>23:37:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1435</td>\n",
+       "      <td>1436</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-18 23:42:00</td>\n",
+       "      <td>126</td>\n",
+       "      <td>23:42:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1436</td>\n",
+       "      <td>1437</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-18 23:47:00</td>\n",
+       "      <td>132</td>\n",
+       "      <td>23:47:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1437</td>\n",
+       "      <td>1438</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-18 23:52:00</td>\n",
+       "      <td>135</td>\n",
+       "      <td>23:52:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1438</td>\n",
+       "      <td>1439</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-18 23:57:00</td>\n",
+       "      <td>128</td>\n",
+       "      <td>23:57:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1439 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0    subjectId         DisplayTime  GlucoseValue      Time\n",
+       "0              1  1636-69-032 2016-01-14 00:03:00           120  00:03:00\n",
+       "1              2  1636-69-032 2016-01-14 00:08:00           120  00:08:00\n",
+       "2              3  1636-69-032 2016-01-14 00:13:00           123  00:13:00\n",
+       "3              4  1636-69-032 2016-01-14 00:18:00           126  00:18:00\n",
+       "4              5  1636-69-032 2016-01-14 00:23:00           127  00:23:00\n",
+       "...          ...          ...                 ...           ...       ...\n",
+       "1434        1435  1636-69-032 2016-01-18 23:37:00           136  23:37:00\n",
+       "1435        1436  1636-69-032 2016-01-18 23:42:00           126  23:42:00\n",
+       "1436        1437  1636-69-032 2016-01-18 23:47:00           132  23:47:00\n",
+       "1437        1438  1636-69-032 2016-01-18 23:52:00           135  23:52:00\n",
+       "1438        1439  1636-69-032 2016-01-18 23:57:00           128  23:57:00\n",
+       "\n",
+       "[1439 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.49"
+       "16.22"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
