--- a/Python - notebooks/Indices/ADRR.ipynb
+++ b/Python - notebooks/Indices/ADRR.ipynb
@@ -23,18 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"~/Desktop/NCSA_genomics/Python - notebooks/TSForecasting/Data/consolidatedDataForPackage.csv\")\n",
+    "data = pd.read_csv(\"~/Desktop/NCSA_genomics/Python - notebooks/GlucoCheck/Data/consolidatedDataForPackage.csv\")\n",
     "data['Display Time'] = pd.to_datetime(data['Display Time'])\n",
-    "data['GlucoseValue'] = pd.to_numeric(data['GlucoseValue'])"
+    "data['GlucoseValue'] = pd.to_numeric(data['GlucoseValue'])\n",
+    "df = data[data['subjectId']=='1636-69-032']\n",
+    "df = df.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,171 +67,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hourlySamples(df):\n",
-    "    groupkey = df['Display Time'].values.astype('datetime64[h]')\n",
-    "    result = df.groupby(groupkey).mean().first()\n",
-    "    result = result.reset_index(drop=True)\n",
-    "    return (result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def adrr(xx, unit):\n",
-    "    \n",
-    "    if unit == 'mg':\n",
-    "        f_bg = 1.509*(np.log(xx['GlucoseValue'])**1.084)-5.381\n",
-    "        xx['F(BG)'] = f_bg\n",
-    "    elif unit == 'mmol':\n",
-    "        f_bg = 1.509*(np.log(xx['GlucoseValue']*18)**1.084)-5.381\n",
-    "        xx['F(BG)'] = f_bg\n",
+    "def adrr(x, units):    \n",
+    "    if (units == 'mg'):\n",
+    "        fBG = 1.509*((np.log(x['GlucoseValue']))**1.084  - 5.381)\n",
+    "    elif (units=='mmol'):\n",
+    "        fBG = 1.509*((np.log(18*x['GlucoseValue']) )**1.084  - 5.381)\n",
     "    else:\n",
-    "        print('Unit should either be mg or mmol')\n",
-    "        return 0\n",
-    "    \n",
-    "    dates = []\n",
-    "    for i in range(len(xx.index)):\n",
-    "        dates.append(xx['Display Time'][i].date())\n",
-    "    xx['Date'] = dates \n",
-    "    \n",
-    "\n",
-    "    for Date, df in xx.groupby('Date'):\n",
-    "        r_BG = 0\n",
-    "        rl_BG = [0]\n",
-    "        rh_BG = [0]\n",
-    "        LR = 0\n",
-    "        HR = 0\n",
-    "        ADDR_daily = []\n",
-    "        for f_BG in df['F(BG)']:\n",
-    "            if f_BG < 0:\n",
-    "                rl_BG.append(f_BG)\n",
-    "            else:\n",
-    "                rh_BG.append(f_BG)\n",
-    "\n",
-    "        LR = max(rl_BG)\n",
-    "        HR = max(rh_BG)\n",
-    "        ADDR_daily.append(LR+HR)\n",
-    "    \n",
-    "    \n",
-    "    return round(mean(ADDR_daily),3)\n",
+    "        return print('units should be either mmol or mg')\n",
     "        \n",
-    "            "
+    "    rBG = 10 * fBG ** 2 # called BG risk function\n",
+    "    s = np.sign(fBG)\n",
+    "    s_left = np.abs(s.where(s == -1, 0))\n",
+    "    rlBG = rBG * s_left # called BG risk function left branch\n",
+    "\n",
+    "    s_right = s.where(s == 1, 0)\n",
+    "    rhBG = rBG * s_right # called BG risk function right branch\n",
+    "\n",
+    "    ADRR = max(rlBG) + max(rhBG) # !!amend the code to output average across days !!!!!\n",
+    "    \n",
+    "    return ADRR\n",
+    "          \n",
+    "#     return pd.DataFrame({'ADRR':[ADRR]}) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1636-69-001 4.038\n",
-      "1636-69-001-2 3.455\n",
-      "1636-69-026 3.455\n",
-      "1636-69-028 2.859\n",
-      "1636-69-032 3.174\n",
-      "1636-69-035 2.95\n",
-      "1636-69-048 2.89\n",
-      "1636-69-053 3.409\n",
-      "1636-69-060 3.618\n",
-      "1636-69-064 3.385\n",
-      "1636-69-069 3.455\n",
-      "1636-69-090 3.649\n",
-      "1636-69-091 3.362\n",
-      "1636-69-100 2.979\n",
-      "1636-69-104 3.12\n",
-      "1636-69-104-2 2.905\n",
-      "1636-69-107 3.576\n",
-      "1636-69-111 3.023\n",
-      "1636-69-114 3.238\n",
-      "1636-69-123 2.843\n",
-      "1636-70-1002 3.106\n",
-      "1636-70-1003 2.843\n",
-      "1636-70-1005 3.961\n",
-      "1636-70-1008 3.226\n",
-      "1636-70-1010 3.68\n",
-      "2133-001 3.68\n",
-      "2133-002 3.432\n",
-      "2133-003 3.301\n",
-      "2133-004 3.618\n",
-      "2133-006 2.874\n",
-      "2133-007 2.979\n",
-      "2133-008 3.106\n",
-      "2133-009 3.079\n",
-      "2133-010 3.037\n",
-      "2133-011 3.264\n",
-      "2133-012 3.079\n",
-      "2133-013 3.872\n",
-      "2133-015 3.362\n",
-      "2133-017 3.134\n",
-      "2133-018 4.222\n",
-      "2133-019 2.89\n",
-      "2133-019-2 3.489\n",
-      "2133-020 2.979\n",
-      "2133-021 3.987\n",
-      "2133-022 3.554\n",
-      "2133-023 3.023\n",
-      "2133-024 3.397\n",
-      "2133-025 2.697\n",
-      "2133-026 3.079\n",
-      "2133-027 2.843\n",
-      "2133-028 2.645\n",
-      "2133-030 2.935\n",
-      "2133-032 3.106\n",
-      "2133-033 3.251\n",
-      "2133-035 3.289\n",
-      "2133-036 3.944\n",
-      "2133-037 3.313\n",
-      "2133-039 3.608\n",
-      "2133-040 3.187\n",
-      "2133-041 3.12\n",
-      "GVP01 4.704\n",
-      "GVP03 4.152\n",
-      "ID01 3.871\n",
-      "ID02 3.419\n",
-      "ID03 5.141\n",
-      "ID11 4.357\n",
-      "ID12 3.961\n",
-      "ID13 3.86\n",
-      "ID21 3.945\n",
-      "ID22 2.769\n",
-      "ID23 3.632\n",
-      "ID29 3.679\n",
-      "ID30 2.977\n",
-      "ID31 2.926\n",
-      "ID32 3.649\n",
-      "ID33 2.923\n",
-      "OD540 4.12\n",
-      "OD544 3.917\n",
-      "OD552 4.68\n",
-      "OD559 3.807\n",
-      "OD563 4.543\n",
-      "OD567 4.704\n",
-      "OD570 4.431\n",
-      "OD575 4.03\n",
-      "OD584 4.563\n",
-      "OD588 4.451\n",
-      "OD591 4.333\n",
-      "OD596 4.333\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Display Time</th>\n",
+       "      <th>GlucoseValue</th>\n",
+       "      <th>subjectId</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-01-13 12:58:17</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-01-13 13:03:17</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2016-01-13 13:08:17</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2016-01-13 13:13:17</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2016-01-13 13:18:17</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1778</td>\n",
+       "      <td>2016-01-19 17:12:49</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1779</td>\n",
+       "      <td>2016-01-19 17:17:49</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1780</td>\n",
+       "      <td>2016-01-19 17:22:49</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1781</td>\n",
+       "      <td>2016-01-19 17:27:49</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1782</td>\n",
+       "      <td>2016-01-19 17:32:49</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1783 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Display Time  GlucoseValue    subjectId        Date\n",
+       "0    2016-01-13 12:58:17         122.0  1636-69-032  2016-01-13\n",
+       "1    2016-01-13 13:03:17         123.0  1636-69-032  2016-01-13\n",
+       "2    2016-01-13 13:08:17         124.0  1636-69-032  2016-01-13\n",
+       "3    2016-01-13 13:13:17         128.0  1636-69-032  2016-01-13\n",
+       "4    2016-01-13 13:18:17         133.0  1636-69-032  2016-01-13\n",
+       "...                  ...           ...          ...         ...\n",
+       "1778 2016-01-19 17:12:49         101.0  1636-69-032  2016-01-19\n",
+       "1779 2016-01-19 17:17:49          98.0  1636-69-032  2016-01-19\n",
+       "1780 2016-01-19 17:22:49         101.0  1636-69-032  2016-01-19\n",
+       "1781 2016-01-19 17:27:49         106.0  1636-69-032  2016-01-19\n",
+       "1782 2016-01-19 17:32:49         107.0  1636-69-032  2016-01-19\n",
+       "\n",
+       "[1783 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for subjectId, df in data.groupby('subjectId'):\n",
-    "    df = fullDay(df)\n",
-    "    adrr_value = adrr(df, 'mg')\n",
-    "    print(subjectId,adrr_value)"
+    "dates = []\n",
+    "for i in range(len(df.index)):\n",
+    "    dates.append(df['Display Time'][i].date())\n",
+    "df['Date'] = dates\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.390817595280894"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adrr_daily = []\n",
+    "for Date, xx in df.groupby('Date'):\n",
+    "    xx = xx.reset_index(drop=True)\n",
+    "    z = adrr(xx,'mg')\n",
+    "    adrr_daily.append(z)\n",
+    "\n",
+    "mean(adrr_daily)\n",
+    "    "
    ]
   },
   {
@@ -237,9 +271,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
   }
  ],
  "metadata": {
